<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UI Sampler</string>
    <string name="action_settings">Settings</string>
    <string name="hint">Enter text</string>
    <string name="submitButtonLabel">Submit</string>
    <string name="hideButtonLabel">Hide</string>
    <string name="backButtonLabel">Back</string>
    <string name="goButtonLabel">Go</string>
    <string name="webHint">Enter a URL</string>
    <string name="nameHint">Enter your name</string>
    <string name="emailHint">Enter your email id</string>
    <string name="phoneHint">Enter your phone number</string>
    <string name="keyboard_activity">EDITOR</string>
    <string name="web_activity">BROWSER</string>
    <string name="list_activity">VERSION LIST</string>

    <string-array name="activities_array">
        <item>Editor</item>
        <item>Browser</item>
        <item>Version List</item>
    </string-array>
    
     <string-array name="android_versions">
        <item>1.5 Cupcake</item>
        <item>1.6 Donut</item>
        <item>2.0 Eclair</item>
        <item>2.1 Eclair</item>
        <item>2.2 Froyo</item>
        <item>2.3 Gingerbread</item>
        <item>3 Honeycomb</item>
        <item>4.0 Ice Cream Sandwich</item>
        <item>4.1 Jelly Bean</item>
        <item>4.2 Jelly Bean</item>
        <item>4.3 Jelly Bean</item>
        <item>4.4 KitKat</item>
    </string-array>

    <string name="title_activity_keyboard">Editor</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_web">Browser</string>
    <string name="title_activity_list">Android Versions List</string>

</resources>
